test/end-to-end/compile-errors/imported-name-refers-to-nothing.crow
import
	crow/parse: foo

main void()
	info log "hello"
	info log foo
